--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img src="./assets/images/daenerys.jpeg" alt="pic">
+    <img src="assets/images/daenerys.jpeg" alt="pic">
     <h1> small things make huge impact in our life</h1>
     <p>When you find the perfect avocado at the supermarket</p>
 
