--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <img src="assets/images/daenerys.jpeg" alt="pic">
-    <h1> small things make huge impact in our life</h1>
+    <h1> small things make an impact in our life</h1>
     <p>When you find the perfect avocado at the supermarket</p>
 
   </body>
